2008-05-19  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_start):
	  Use right error code when typefinding fails, so we can use
	  the default (translated) error messages.

2008-05-19  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_get_range),
	(gst_base_src_start):
	When the subclass did not set caps on outgoing buffers, configure the
	caps we negotiated on the source pad.
	When the typefind helper does not find caps, error out properly instead
	of doing things with NULL caps.

2008-05-18  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gsttypefind.h:
	  Tabs to spaces, oh yes!

2008-05-18  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* tests/check/gst/gstcaps.c: (test_intersect2), (gst_caps_suite):
	  Add David's and Benjamin's tests for array intersection to the
	  unit test suite (#147931).

2008-05-18  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstevent.c:
	  Document that gst_event_new_tag() and gst_event_new_navigation()
	  take ownership of the taglist/structure passed to them. (#533635).

2008-05-17  Jan Schmidt  <jan.schmidt@sun.com>

	* docs/Makefile.am:
	Don't descend into the plugins dir if plugin docs building
	is disabled.

	* docs/README:
	Add a note about the new type:GTypeName syntax for the plugin
	documentation .types file.

2008-05-17  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstmessage.c: (gst_message_new_error),
	(gst_message_new_warning), (gst_message_new_info):
	* gst/gstmessage.h:
	Mark the debug string parameters as const. Fixes bug #533490.

2008-05-16  Sebastian Dröge  <slomo@circular-chaos.org>

	* libs/gst/base/gsttypefindhelper.c: (helper_find_peek):
	Sort buffer cache list by end offsets. This makes sure that we don't
	stop to search for a cached buffer that contains the requested data
	too early.
	Also read a minimum of 4k bytes instead of 512 bytes as this is a bit