@@ -2144,6 +2144,7 @@ GstTypeFindFunction
 GstTypeFindProbability
 gst_type_find_peek
 gst_type_find_suggest
+gst_type_find_suggest_simple
 gst_type_find_get_length
 gst_type_find_register
 <SUBSECTION Standard>
